# llmfuel

./: .gitignore  LICENSE  Makefile  README.md  SAFETY.md  __init__.py  assistant_commands.md  compress.py  llmfuel-v0.1  ollama.py  pyproject.toml  test_receipts.py
.github/workflows/: ci.yml
benchmarks/: demo_report.json  gsm8k_dedup.py  gsm8k_results.json  test-benchmark.json
fuel/: __init__.py  __main__.py  _init_.py  cache.py  cli.py  compress.py  model_utils.py  receipts.py
fuel /: cache.py  compress.py  receipts.py
fuel/adapters/: __init__.py  api.py  ollama.py  ollama_stream.py  openai_compatible.py
llmfuel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_cli.py  test_compress.py  test_dedup_quality.py  test_model_utils.py  test_ollama_wrapper.py  test_receipts.py  test_stream.py
