[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "llmfuel"
version = "0.1.0"
description = "Live chain-of-thought semantic dedup + local audit receipts for open reasoning models."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["llm", "agents", "token-efficiency", "chain-of-thought", "deduplication"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "transformers>=4.40.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4.0"]
pi = []  # MiniLM-v2-L6 preset — no extra deps, uses sentence-transformers above

[project.urls]
Homepage = "https://github.com/stgreg30/llmfuel"
Issues = "https://github.com/stgreg30/llmfuel/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["fuel*"]

[tool.ruff]
line-length = 100
target-version = "py310"
