[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llmfuel"
version = "0.1.0"
description = "Stop your reasoning model from thinking in circles"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Ash Mi", email = "ash@llmfuel.dev"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]
ollama = ["ollama>=0.1.0"]
gemma = ["llama-cpp-python>=0.2.0"]
all = ["ollama>=0.1.0", "llama-cpp-python>=0.2.0", "pytest>=7.0"]

[project.scripts]
llmfuel = "fuel.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fuel*"]
